[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/fonts/ui_font_medium.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/sprites/speech_bubble.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/ui_font_tiny.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/sprites/title_screen/button.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/title_screen/layer_1.png" type="Texture" id=5]
[ext_resource path="res://scripts/high_score_screen.gd" type="Script" id=6]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 64, 18 )
modulate_color = Color( 0.423529, 0.419608, 0.419608, 1 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 64, 18 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -3452.0
margin_top = -3039.0
margin_right = 4771.0
margin_bottom = 4211.0
color = Color( 0.290196, 0.219608, 0.145098, 1 )

[node name="Layer1" type="Sprite" parent="."]
position = Vector2( 500, 360 )
scale = Vector2( 7.8125, 5.625 )
texture = ExtResource( 5 )

[node name="SpeechBubble" type="Sprite" parent="."]
position = Vector2( 281.5, 187.5 )
scale = Vector2( 3.74219, 3.81928 )
texture = ExtResource( 2 )

[node name="ScoreLabel" type="Label" parent="SpeechBubble"]
margin_left = -35.9416
margin_top = -31.8123
margin_right = 38.0584
margin_bottom = -3.81231
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Score"
align = 1
valign = 1

[node name="ScoreCountLabel" type="Label" parent="SpeechBubble"]
margin_left = -35.9415
margin_top = 3.01104
margin_right = 38.0585
margin_bottom = 31.011
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "9999"
align = 1
valign = 1

[node name="MainMenuButton" type="Button" parent="."]
margin_left = 310.0
margin_top = 503.0
margin_right = 681.0
margin_bottom = 641.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Main Menu"
